
[TestGetWebsitePages/Base - 1]
RECORDS:
&{StatsPagesSummary:{Pathname:/ Visitors:167350 VisitorsPercentage:0.3346} Pageviews:333970 PageviewsPercentage:0.334 Bounces:42187 Duration:4996}
&{StatsPagesSummary:{Pathname:/contact Visitors:166840 VisitorsPercentage:0.3336} Pageviews:333428 PageviewsPercentage:0.3334 Bounces:41749 Duration:4981}
&{StatsPagesSummary:{Pathname:/about Visitors:165998 VisitorsPercentage:0.3319} Pageviews:332602 PageviewsPercentage:0.3326 Bounces:41676 Duration:5003}

---

[TestGetWebsitePages/Browser - 1]
RECORDS:
&{StatsPagesSummary:{Pathname:/ Visitors:55831 VisitorsPercentage:0.336} Pageviews:111555 PageviewsPercentage:0.3349 Bounces:14013 Duration:5009}
&{StatsPagesSummary:{Pathname:/contact Visitors:55212 VisitorsPercentage:0.3323} Pageviews:110848 PageviewsPercentage:0.3328 Bounces:13880 Duration:4962}
&{StatsPagesSummary:{Pathname:/about Visitors:55102 VisitorsPercentage:0.3317} Pageviews:110690 PageviewsPercentage:0.3323 Bounces:13858 Duration:4997}

---

[TestGetWebsitePages/Country - 1]
RECORDS:
&{StatsPagesSummary:{Pathname:/ Visitors:18703 VisitorsPercentage:0.3381} Pageviews:37277 PageviewsPercentage:0.3361 Bounces:4732 Duration:4976}
&{StatsPagesSummary:{Pathname:/about Visitors:18311 VisitorsPercentage:0.331} Pageviews:36819 PageviewsPercentage:0.332 Bounces:4610 Duration:4976}
&{StatsPagesSummary:{Pathname:/contact Visitors:18304 VisitorsPercentage:0.3309} Pageviews:36807 PageviewsPercentage:0.3319 Bounces:4652 Duration:4978}

---

[TestGetWebsitePages/Device - 1]
RECORDS:
&{StatsPagesSummary:{Pathname:/ Visitors:6171 VisitorsPercentage:0.3375} Pageviews:12381 PageviewsPercentage:0.3355 Bounces:1568 Duration:4960}
&{StatsPagesSummary:{Pathname:/about Visitors:6127 VisitorsPercentage:0.3351} Pageviews:12337 PageviewsPercentage:0.3343 Bounces:1485 Duration:5013}
&{StatsPagesSummary:{Pathname:/contact Visitors:5988 VisitorsPercentage:0.3275} Pageviews:12190 PageviewsPercentage:0.3303 Bounces:1528 Duration:4954}

---

[TestGetWebsitePages/Empty - 1]
RECORDS:

---

[TestGetWebsitePages/Language - 1]
RECORDS:
&{StatsPagesSummary:{Pathname:/ Visitors:3115 VisitorsPercentage:0.3403} Pageviews:6156 PageviewsPercentage:0.3331 Bounces:770 Duration:4973}
&{StatsPagesSummary:{Pathname:/about Visitors:3079 VisitorsPercentage:0.3364} Pageviews:6212 PageviewsPercentage:0.3361 Bounces:755 Duration:5048}
&{StatsPagesSummary:{Pathname:/contact Visitors:2960 VisitorsPercentage:0.3234} Pageviews:6113 PageviewsPercentage:0.3308 Bounces:803 Duration:4832}

---

[TestGetWebsitePages/OS - 1]
RECORDS:
&{StatsPagesSummary:{Pathname:/ Visitors:1041 VisitorsPercentage:0.3365} Pageviews:2055 PageviewsPercentage:0.3318 Bounces:269 Duration:4985}
&{StatsPagesSummary:{Pathname:/about Visitors:1032 VisitorsPercentage:0.3335} Pageviews:2076 PageviewsPercentage:0.3352 Bounces:274 Duration:4894}
&{StatsPagesSummary:{Pathname:/contact Visitors:1021 VisitorsPercentage:0.33} Pageviews:2062 PageviewsPercentage:0.333 Bounces:279 Duration:4925}

---

[TestGetWebsitePages/Pathname - 1]
RECORDS:
&{StatsPagesSummary:{Pathname:/ Visitors:1041 VisitorsPercentage:1} Pageviews:2055 PageviewsPercentage:1 Bounces:269 Duration:4985}

---

[TestGetWebsitePages/Referrer - 1]
RECORDS:
&{StatsPagesSummary:{Pathname:/ Visitors:340 VisitorsPercentage:1} Pageviews:672 PageviewsPercentage:1 Bounces:84 Duration:4865}

---

[TestGetWebsitePages/UTMCampaign - 1]
RECORDS:
&{StatsPagesSummary:{Pathname:/ Visitors:107 VisitorsPercentage:1} Pageviews:215 PageviewsPercentage:1 Bounces:25 Duration:5043}

---

[TestGetWebsitePages/UTMMedium - 1]
RECORDS:
&{StatsPagesSummary:{Pathname:/ Visitors:40 VisitorsPercentage:1} Pageviews:79 PageviewsPercentage:1 Bounces:11 Duration:5119}

---

[TestGetWebsitePages/UTMSource - 1]
RECORDS:
&{StatsPagesSummary:{Pathname:/ Visitors:19 VisitorsPercentage:1} Pageviews:32 PageviewsPercentage:1 Bounces:5 Duration:4172}

---

[TestGetWebsitePagesSummary/Base - 1]
RECORDS:
&{Pathname:/ Visitors:167350 VisitorsPercentage:0.3346}
&{Pathname:/contact Visitors:166840 VisitorsPercentage:0.3336}
&{Pathname:/about Visitors:165998 VisitorsPercentage:0.3319}

---

[TestGetWebsitePagesSummary/Browser - 1]
RECORDS:
&{Pathname:/ Visitors:55831 VisitorsPercentage:0.336}
&{Pathname:/contact Visitors:55212 VisitorsPercentage:0.3323}
&{Pathname:/about Visitors:55102 VisitorsPercentage:0.3317}

---

[TestGetWebsitePagesSummary/Country - 1]
RECORDS:
&{Pathname:/ Visitors:18703 VisitorsPercentage:0.3381}
&{Pathname:/about Visitors:18311 VisitorsPercentage:0.331}
&{Pathname:/contact Visitors:18304 VisitorsPercentage:0.3309}

---

[TestGetWebsitePagesSummary/Device - 1]
RECORDS:
&{Pathname:/ Visitors:6171 VisitorsPercentage:0.3375}
&{Pathname:/about Visitors:6127 VisitorsPercentage:0.3351}
&{Pathname:/contact Visitors:5988 VisitorsPercentage:0.3275}

---

[TestGetWebsitePagesSummary/Empty - 1]
RECORDS:

---

[TestGetWebsitePagesSummary/Language - 1]
RECORDS:
&{Pathname:/ Visitors:3115 VisitorsPercentage:0.3403}
&{Pathname:/about Visitors:3079 VisitorsPercentage:0.3364}
&{Pathname:/contact Visitors:2960 VisitorsPercentage:0.3234}

---

[TestGetWebsitePagesSummary/OS - 1]
RECORDS:
&{Pathname:/ Visitors:1041 VisitorsPercentage:0.3365}
&{Pathname:/about Visitors:1032 VisitorsPercentage:0.3335}
&{Pathname:/contact Visitors:1021 VisitorsPercentage:0.33}

---

[TestGetWebsitePagesSummary/Pathname - 1]
RECORDS:
&{Pathname:/ Visitors:1041 VisitorsPercentage:1}

---

[TestGetWebsitePagesSummary/Referrer - 1]
RECORDS:
&{Pathname:/ Visitors:340 VisitorsPercentage:1}

---

[TestGetWebsitePagesSummary/UTMCampaign - 1]
RECORDS:
&{Pathname:/ Visitors:107 VisitorsPercentage:1}

---

[TestGetWebsitePagesSummary/UTMMedium - 1]
RECORDS:
&{Pathname:/ Visitors:40 VisitorsPercentage:1}

---

[TestGetWebsitePagesSummary/UTMSource - 1]
RECORDS:
&{Pathname:/ Visitors:19 VisitorsPercentage:1}

---
